<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">

    <ImageView
        android:id="@+id/memberAvatar"
        android:layout_width="@dimen/detail_avatar_size"
        android:layout_height="@dimen/detail_avatar_size"
        android:contentDescription="@string/contentDescription_teamMemberAvatar"
        tools:scr="@drawable/ic_launcher_backgroud"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/member_info"
            android:text="@string/label_name"></TextView>
        <TextView
            style="@style/member_info"
            android:id="@+id/memberName"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/member_info"
            android:text="@string/label_login"></TextView>
        <TextView
            style="@style/member_info"
            android:id="@+id/memberLogin"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/member_info"
            android:text="@string/label_company"></TextView>
        <TextView
            style="@style/member_info"
            android:id="@+id/memberCompany"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/member_info"
            android:text="@string/label_email"></TextView>
        <TextView
            style="@style/member_info"
            android:id="@+id/memberEmail"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/member_info"
            android:text="@string/label_type"></TextView>
        <TextView
            style="@style/member_info"
            android:id="@+id/memberType"></TextView>
    </LinearLayout>

</LinearLayout>
