<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.teammembers.TeamMembersActivity">

    <LinearLayout
        android:id="@+id/teamNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teamMembersHeader"
        android:orientation="horizontal"
        android:padding="@dimen/padding_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/teamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/team_hint"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:text="@string/default_team_name" />

        <Button
            android:id="@+id/showMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_button" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameContainer">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/teamMembersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="invisible"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/loadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_not_found_message">

            <ImageView
                android:id="@+id/icRunning"
                android:layout_width="@dimen/detail_avatar_size"
                android:layout_height="@dimen/detail_avatar_size"
                android:layout_centerInParent="true"
                android:contentDescription="@string/error_retrieving_team"
                android:src="@drawable/ic_run"
                android:visibility="invisible"
                tools:srcCompat="@tools:sample/avatars"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/emptyState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icRunning"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:text="@string/empty_state_format"
                android:textSize="@dimen/detail_name_text"
                android:visibility="invisible"
                tools:visibility="visible" />
            <!--use razeware in the search to see the expected empty message-->
        </RelativeLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
